--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github-private:niceonionslice/front-end-sandbox.git",
   "author": "niceonionslice <niceonionslice@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "create-react-app": "^3.1.1"
+  }
 }
