--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "niceonionslice <niceonionslice@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "create-react-app": "^3.1.1"
+    "create-react-app": "^3.1.1",
+    "node-sass": "^4.12.0"
   }
 }
